# moo

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mvp-plan.md  plan.md  vision.md
.github/workflows/: ci.yml  release.yml
crates/got-cli/: Cargo.toml
crates/got-cli/src/: main.rs
crates/got-core/: Cargo.toml  build.rs
crates/got-core/src/: config.rs  git.rs  image.rs  lib.rs  shim.rs  sync.rs
crates/got-store/: Cargo.toml
crates/got-store/src/: lib.rs
crates/got-vmm/: Cargo.toml
crates/got-vmm/src/: lib.rs  proto.rs
crates/guest-agent/: Cargo.toml
crates/guest-agent/src/: main.rs
crates/moo-cli/: Cargo.toml
crates/moo-cli/src/: main.rs
crates/moo-core/: Cargo.toml  build.rs
crates/moo-core/src/: config.rs  git.rs  image.rs  lib.rs  shim.rs  sync.rs
crates/moo-store/: Cargo.toml
crates/moo-store/src/: lib.rs
crates/moo-vmm/: Cargo.toml  build.rs
crates/moo-vmm/src/: lib.rs  proto.rs
crates/spike/: Cargo.toml  make-disk.sh
crates/spike/src/: main.rs
scripts/: agent-base.sh  demo-bisect.sh  demo-parallel.sh  demo-timetravel.sh  desktop.sh  install.sh  leakcheck.sh
skills/got-code/: SKILL.md
skills/got-golden-image/: SKILL.md
skills/got-verify/: SKILL.md
skills/moo-code/: SKILL.md
skills/moo-desktop/: SKILL.md
skills/moo-golden-image/: SKILL.md
skills/moo-verify/: SKILL.md
