[workspace]
resolver = "2"
members = [
    "crates/spike",
    "crates/guest-agent",
    "crates/moo-vmm",
    "crates/moo-store",
    "crates/moo-core",
    "crates/moo-cli",
]
default-members = [
    "crates/spike",
    "crates/moo-vmm",
    "crates/moo-store",
    "crates/moo-core",
    "crates/moo-cli",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
libc = "0.2"
blake3 = { version = "1", features = ["mmap", "rayon"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }
tar = "0.4"
flate2 = "1"
