[package]
name = "got-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "got"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
got-core = { path = "../got-core" }
got-store = { path = "../got-store" }
got-vmm = { path = "../got-vmm" }
