[package]
name = "got-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
libc.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ureq.workspace = true
tar.workspace = true
flate2.workspace = true
got-vmm = { path = "../got-vmm" }
got-store = { path = "../got-store" }
