[package]
name = "guest-agent"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "moo-agent"
path = "src/main.rs"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[profile.release]
strip = true
