[package]
name = "moo-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "moo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
moo-core = { path = "../moo-core" }
moo-store = { path = "../moo-store" }
moo-vmm = { path = "../moo-vmm" }
