[package]
name = "moo-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
libc.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ureq.workspace = true
tar.workspace = true
flate2.workspace = true
moo-vmm = { path = "../moo-vmm" }
moo-store = { path = "../moo-store" }
